banner section added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Travel Time</title>
-</head>
-<body>
-    <header></header>
+  </head>
+  <body>
+    <header>
+      <nav></nav>
+      
+      <!-- banner section -->
+      <section class="banner">
+        <h1 class="banner-title">Explore Your Travel</h1>
+        <p class="banner-description">
+          Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+          adipiscing. In et odio enim ac quis sapien urna eu phasellus.
+        </p>
+        <div class="banner-input-field">
+          <input type="text" placeholder="Where Go" id="where-go-field" />
+          <select name="" id="when-field">
+            <option value="">When</option>
+          </select>
+          <select name="" id="select-type-field">
+            <option value="">Select Type</option>
+          </select>
+          <button class="btn-style">Find Now</button>
+        </div>
+      </section>
+    </header>
     <main></main>
     <footer></footer>
-</body>
+  </body>
 </html>
