--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav></nav>
-      
+
       <!-- banner section -->
       <section class="banner">
         <h1 class="banner-title">Explore Your Travel</h1>
@@ -29,7 +29,27 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+        <!-- Popular Tours -->
+        <section class="popular-tour">
+            <div class="popular-tour-container">
+                <h2 class="popular-tour-title">Our Popular Tours</h2>
+                <p class="popular-tour-description">
+                    <span>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</span>
+                    <ul>
+                        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                    </ul>
+                    <span>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt.</span>
+                </p>
+                <div class="popular-tour-btn">
+                    <button class="btn-style">Read More</button>
+                </div>
+            </div>
+            <img width="540px" height="550px" src="Images/Rectangle 4.png" alt="">
+        </section>
+    </main>
     <footer></footer>
   </body>
 </html>
