--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </section>
     </header>
     <main>
-        <!-- Popular Tours -->
+        <!-- Popular Tours Section-->
         <section class="popular-tour">
             <div class="popular-tour-container">
                 <h2 class="popular-tour-title">Our Popular Tours</h2>
@@ -48,6 +48,29 @@
                 </div>
             </div>
             <img width="540px" height="550px" src="Images/Rectangle 4.png" alt="">
+        </section>
+
+        <!-- Destination Section -->
+        <section class="destination-container">
+            <h2 class="destination-title">
+                Choose Your Destination
+            </h2>
+            <p class="destination-description">
+                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+            </p>
+            <div class="destination-images-row-one">
+                <img src="Images/Rectangle 5.png" alt="">
+                <img src="Images/Rectangle 8.png" alt="">
+            </div>
+            <div class="destination-images-row-two">
+                <img src="Images/Rectangle 6.png" alt="">
+                <img src="Images/Rectangle 7.png" alt="">
+                <img src="Images/Rectangle 9.png" alt="">
+            </div>
+            <div class="destination-images-row-three">
+                <img src="Images/Rectangle 11.png" alt="">
+                <img src="Images/Rectangle 10.png" alt="">
+            </div>
         </section>
     </main>
     <footer></footer>
