choose us section added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Popular Tours Section-->
         <section class="popular-tour">
             <div class="popular-tour-container">
-                <h2 class="popular-tour-title">Our Popular Tours</h2>
+                <h2 class="title">Our Popular Tours</h2>
                 <p class="popular-tour-description">
                     <span>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</span>
                     <ul>
@@ -52,7 +52,7 @@
 
         <!-- Destination Section -->
         <section class="destination-container">
-            <h2 class="destination-title">
+            <h2 class="title">
                 Choose Your Destination
             </h2>
             <p class="destination-description">
@@ -70,6 +70,37 @@
             <div class="destination-images-row-three">
                 <img src="Images/Rectangle 11.png" alt="">
                 <img src="Images/Rectangle 10.png" alt="">
+            </div>
+        </section>
+
+        <!-- Choose Us Section -->
+        <section class="choose-us-container">
+            <h2 class="title">Why Choose Us</h2>
+            <p class="choose-us-description">
+                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+            </p>
+            <div class="choose-us-card">
+                <div class="card-row-one">
+                    <div class="card-hotels">
+                        <img src="Images/hotel 1.svg" alt="">
+                        <h4 class="card-title">Handpicked Hotels</h4>
+                        <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                    <div class="card-service">
+                        <img src="Images/map 1.svg" alt="">
+                        <h4 class="card-title">World Class Service</h4>
+                        <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                  
+                </div>
+                <div class="card-row-two">
+                    <div class="card-price">
+                        <img src="Images/price-tag 1.svg" alt="">
+                        <h4 class="card-title">Best Price Guarantee</h4>
+                        <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                </div>
+                
             </div>
         </section>
     </main>
