--- a/index.html
+++ b/index.html
@@ -103,6 +103,25 @@
                 
             </div>
         </section>
+
+        <!-- Newsletter Section -->
+        <section class="newsletter-container">
+            <div class="newsletter-content">
+                <h4 class="newsletter-title">Newsletter</h4>
+                <p class="newsletter-description">Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr>
+                <input type="text"  placeholder="Enter your name" id="newsletter-text">
+                <input type="email" placeholder="Enter your email"  id="newsletter-email">
+                <button class="btn-style">Subscribe</button>
+            </div>
+            <div class="newsletter-image">
+                <div class="newsletter-travel-discount">
+                    <h5>Travel.com</h5>
+                    <h4>Save up to 70%</h4>
+                </div>
+                <img src="Images/Rectangle 8 (1).png" alt="">
+            </div>
+        </section>
     </main>
     <footer></footer>
   </body>
