--- a/index.html
+++ b/index.html
@@ -123,6 +123,26 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-title">
+            <img src="Images/Group 40071 (2).png" alt="">
+            <h4><span class="footer-travel-text">Travel</span>
+                Time</h4>
+            <!-- <span class="footer-time-text">Time</span> -->
+        </div>
+        <p class="footer-description">
+            Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. 
+        </p>
+        <div class="footer-icon">
+            <img src="Images/icons8-facebook-30.png" alt="">
+            <img src="Images/icons8-instagram-30.png" alt="">
+            <img src="Images/icons8-twitter-30.png" alt="">
+            <img src="Images/icons8-github-30.png" alt="">
+        </div>
+        <hr>
+        <p class="footer-text">
+            2017, All Rights Reserved.
+        </p>
+    </footer>
   </body>
 </html>
