destination section modified

--- a/index.html
+++ b/index.html
@@ -59,17 +59,31 @@
                 Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
             </p>
             <div class="destination-images-row-one">
-                <img src="Images/Rectangle 5.png" alt="">
-                <img src="Images/Rectangle 8.png" alt="">
+                <div class="destination-image-maldives destination-background-image">
+                    <h1>Maldives</h1>
+                </div>
+                <div class="destination-image-indonesia destination-background-image">
+                    <h1>Indonesia</h1>
+                </div>
             </div>
             <div class="destination-images-row-two">
-                <img src="Images/Rectangle 6.png" alt="">
-                <img src="Images/Rectangle 7.png" alt="">
-                <img src="Images/Rectangle 9.png" alt="">
+                <div class="destination-image-srilanka destination-background-image">
+                    <h1>Srilanka</h1>
+                </div>
+                <div class="destination-image-north-america destination-background-image">
+                    <h1>North America</h1>
+                </div>
+                <div class="destination-image-kashmir destination-background-image">
+                    <h1>Kashmir</h1>
+                </div>
             </div>
             <div class="destination-images-row-three">
-                <img src="Images/Rectangle 11.png" alt="">
-                <img src="Images/Rectangle 10.png" alt="">
+                <div class="destination-image-bangladesh destination-background-image">
+                    <h1>Bangladesh</h1>
+                </div>
+                <div class="destination-image-bandarban destination-background-image">
+                    <h1>Bandarban</h1>
+                </div>
             </div>
         </section>
 
