--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
   </head>
   <body>
     <header>
-      <nav></nav>
+      <nav>
+        <div class="nav-title">
+            <img src="Images/Group 40071 (2).png" alt="">
+            <h4><span class="nav-travel-text">Travel</span>
+                Time</h4>
+        </div>
+        <div class="nav-link">
+            <ul>
+                <li class="nav-link-home">Home</li>
+                <li>Packages</li>
+                <li>Testimonial</li>
+                <li>Blog</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+      </nav>
 
       <!-- banner section -->
       <section class="banner">
@@ -142,7 +157,6 @@
             <img src="Images/Group 40071 (2).png" alt="">
             <h4><span class="footer-travel-text">Travel</span>
                 Time</h4>
-            <!-- <span class="footer-time-text">Time</span> -->
         </div>
         <p class="footer-description">
             Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. 
