navbar section modified

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+        <!-- navbar section -->
       <nav>
         <div class="nav-title">
             <img src="Images/Group 40071 (2).png" alt="">
@@ -16,11 +17,11 @@
         </div>
         <div class="nav-link">
             <ul>
-                <li class="nav-link-home">Home</li>
-                <li>Packages</li>
-                <li>Testimonial</li>
-                <li>Blog</li>
-                <li>Contact</li>
+                <li class="nav-link-home"><a href="#">Home</a></li>
+                <li><a href="#">Packages</a> </li>
+                <li><a href="#">Testimonial</a> </li>
+                <li><a href="#">Blog</a> </li>
+                <li><a href="#">Contact</a> </li>
             </ul>
         </div>
       </nav>
