responsive style added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <li><a href="#">Contact</a> </li>
             </ul>
         </div>
+        <div class="nav-icon">
+            <img src="Images/icons8-menu-50.png" alt="">
+        </div>
       </nav>
 
       <!-- banner section -->
@@ -49,7 +52,7 @@
         <!-- Popular Tours Section-->
         <section class="popular-tour">
             <div class="popular-tour-container">
-                <h2 class="title">Our Popular Tours</h2>
+                <h2 class="title popular-tour-title">Our Popular Tours</h2>
                 <p class="popular-tour-description">
                     <span>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</span>
                     <ul>
