feedback section added and feedback style added

--- a/index.html
+++ b/index.html
@@ -137,6 +137,56 @@
             </div>
         </section>
 
+        <!-- Feedback Section -->
+        <section class="feedback-container">
+            <h1 class="title">Travellers Feedback</h1>
+            <p class="title-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div class="feedback">
+                <div>
+                    <blockquote>
+                        <p class="feedback-description">
+                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga sed possimus reprehenderit iusto labore animi quasi. Saepe repellendus sint itaque!
+                        </p>
+                    </blockquote>
+                    <div class="feedback-image-name-container">
+                        <img width="80px" height="80px" src="Images/T1.jpg" alt="">
+                        <h2>
+                            John Smith <br>
+                            <span>USA</span>
+                        </h2>
+                    </div>
+                </div>
+                <div>
+                    <blockquote>
+                        <p class="feedback-description">
+                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga sed possimus reprehenderit iusto labore animi quasi. Saepe repellendus sint itaque!
+                        </p>
+                    </blockquote>
+                    <div class="feedback-image-name-container">
+                        <img width="80px" height="80px" src="Images/T2.jpg" alt="">
+                        <h2>
+                            Curley Shey <br>
+                            <span>Zamaika</span>
+                        </h2>
+                    </div>
+                </div>
+                <div>
+                    <blockquote>
+                        <p class="feedback-description">
+                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga sed possimus reprehenderit iusto labore animi quasi. Saepe repellendus sint itaque!
+                        </p>
+                    </blockquote>
+                    <div class="feedback-image-name-container">
+                        <img width="80px" height="80px" src="Images/T3.jpg" alt="">
+                        <h2>
+                            Rosana Riti <br>
+                            <span>Germany</span>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Newsletter Section -->
         <section class="newsletter-container">
             <div class="newsletter-content">
