responsive style completed

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
       <section class="banner">
         <h1 class="banner-title">Explore Your Travel</h1>
         <p class="banner-description">
-          Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
-          adipiscing. In et odio enim ac quis sapien urna eu phasellus.
+          Make you travel entertaining with us.
+          We make sure your comfortable for your best tour days.
+          Come fast and let's travel.
         </p>
         <div class="banner-input-field">
           <input type="text" placeholder="Where Go" id="where-go-field" />
@@ -54,13 +55,13 @@
             <div class="popular-tour-container">
                 <h2 class="title popular-tour-title">Our Popular Tours</h2>
                 <p class="popular-tour-description">
-                    <span>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</span>
+                    <span>Tour makes you happy and it's refresh our mind and souls.We go the best places which give you comfort</span>
                     <ul>
-                        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
-                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
-                        <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                        <li>Climbing Mountain Everest with ten member of team.</li>
+                        <li>Visit Blue Sea and the area of mogol empire in middle east.</li>
+                        <li>Amazing Kashmir and the most beautiful Tajmohol in India. </li>
                     </ul>
-                    <span>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt.</span>
+                    <span>Life is short so go and visit world.Join our team and get very big advantage from our team and our travel society.</span>
                 </p>
                 <div class="popular-tour-btn">
                     <button class="btn-style">Read More</button>
@@ -75,7 +76,7 @@
                 Choose Your Destination
             </h2>
             <p class="destination-description">
-                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+                just select one and come to us with your friends and family, we give you best adventure privilege.
             </p>
             <div class="destination-images-row-one">
                 <div class="destination-image-maldives destination-background-image">
@@ -110,19 +111,19 @@
         <section class="choose-us-container">
             <h2 class="title">Why Choose Us</h2>
             <p class="choose-us-description">
-                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+                We provide best service and privileges that you can't find anywhere.
             </p>
             <div class="choose-us-card">
                 <div class="card-row-one">
                     <div class="card-hotels">
                         <img src="Images/hotel 1.svg" alt="">
                         <h4 class="card-title">Handpicked Hotels</h4>
-                        <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                        <p class="card-description">Our first priority is travellers comforts. We make sure that every travellers can get best output from us. Our hotel management system is best from others and we give best hotel service with no hessels.  </p>
                     </div>
                     <div class="card-service">
                         <img src="Images/map 1.svg" alt="">
                         <h4 class="card-title">World Class Service</h4>
-                        <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                        <p class="card-description">We provide world class service that make travelers day comfort. We are familiar for our service and we make sure every small things that would help for travelers comfort. </p>
                     </div>
                   
                 </div>
@@ -130,7 +131,7 @@
                     <div class="card-price">
                         <img src="Images/price-tag 1.svg" alt="">
                         <h4 class="card-title">Best Price Guarantee</h4>
-                        <p class="card-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                        <p class="card-description">Only we give resonable slow price rate with high security and you can get a comfortable package for best places.</p>
                     </div>
                 </div>
                 
@@ -139,13 +140,13 @@
 
         <!-- Feedback Section -->
         <section class="feedback-container">
-            <h1 class="title">Travellers Feedback</h1>
-            <p class="title-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <h1 class="title">Travelers Feedback</h1>
+            <p class="title-text">what travelers say !!!</p>
             <div class="feedback">
                 <div>
                     <blockquote>
                         <p class="feedback-description">
-                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga sed possimus reprehenderit iusto labore animi quasi. Saepe repellendus sint itaque!
+                       Absolutely amazing and best service from Time Travel. They give me best service and no objection to them. 
                         </p>
                     </blockquote>
                     <div class="feedback-image-name-container">
@@ -159,7 +160,8 @@
                 <div>
                     <blockquote>
                         <p class="feedback-description">
-                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga sed possimus reprehenderit iusto labore animi quasi. Saepe repellendus sint itaque!
+                       For the first time i admire there services and their organization are more helpful to any cases related to the tour.Best Service.
+                       Their price rate were not so high, it's good for me.
                         </p>
                     </blockquote>
                     <div class="feedback-image-name-container">
@@ -173,7 +175,8 @@
                 <div>
                     <blockquote>
                         <p class="feedback-description">
-                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga sed possimus reprehenderit iusto labore animi quasi. Saepe repellendus sint itaque!
+                       Wonderful, everybody where comfortable and their service was smart and can get more privilege and price rate was good for me.
+                       Best of luck time travel.
                         </p>
                     </blockquote>
                     <div class="feedback-image-name-container">
@@ -213,7 +216,7 @@
                 Time</h4>
         </div>
         <p class="footer-description">
-            Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. 
+            We make sure travelers comfort and we give premium travel service that make us familiar to everyone.
         </p>
         <div class="footer-icon">
             <img src="Images/icons8-facebook-30.png" alt="">
